--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,9 @@
 [user]
-	email = horto202@umn.edu
+	email = nickkbhorton@gmail.com
 	name = Nick Horton
 [core]
 	editor = vscode
 [init]
 	defaultBranch = main
-[credential "https://github.umn.edu"]
-	helper = 
-	helper = !/usr/bin/gh auth git-credential
+[credential]
+	helper = store
